--- a/access-beta.html
+++ b/access-beta.html
@@ -4,53 +4,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Access Beta</title>
-    <link rel="icon" href="images/Google.ico" type="image/x-icon">
+    <link rel="icon" href="Google.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
-    <!-- Google Fonts for Smoother Typography -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f0f4ff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        .topbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #0056b3;
+            padding: 10px;
+            border-radius: 8px;
+        }
+        .button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin: 0 5px;
+        }
+        .button:hover {
+            background-color: #0056b3;
+        }
+        .search-container {
+            display: flex;
+            align-items: center;
+        }
+        .search-bar {
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 10px;
+            margin-right: 5px;
+            width: 300px;
+            transition: width 0.3s ease;
+        }
+        .search-bar:focus {
+            width: 400px;
+            outline: none;
+        }
+    </style>
 </head>
 <body>
-    <!-- Topbar with buttons -->
-    <nav class="topbar">
-        <div class="left">
-            <a href="index.html" class="topbar-button">Home</a>
-            <a href="https://youtu.be/P1jJywOXV5Y?si=0N5SyK70V_2c0UrO" class="topbar-button" target="_blank">YouTube</a>
-            <span class="topbar-button disabled">Beta</span>
-        </div>
-        <div class="right">
-            <span class="topbar-title">Access Beta</span>
-        </div>
-    </nav>
 
-    <!-- Search Bar and Submit Button -->
-    <div class="search-container">
-        <form id="search-form" onsubmit="accessWebsite(event)">
-            <input type="text" id="search-input" class="search-bar" placeholder="Enter URL or search" />
-            <button type="submit" class="search-button">Go</button>
-        </form>
+    <div class="topbar">
+        <div>Access Beta</div>
+        <div class="search-container">
+            <input type="text" id="search-bar" class="search-bar" placeholder="Search or enter URL">
+            <button id="go-button" class="button" onclick="accessWebsite()">Go</button>
+        </div>
+        <div>
+            <a href="index.html" class="button">Home</a>
+            <a href="https://youtu.be/P1jJywOXV5Y?si=0N5SyK70V_2c0UrO" class="button">YouTube</a>
+            <button class="button" onclick="window.location.href='local.php'">Settings</button>
+            <button class="button" disabled>Beta</button>
+        </div>
     </div>
 
-    <div class="content">
-        <!-- Placeholder for additional content -->
-    </div>
+    <iframe id="website-frame" style="display: none; width: 100%; height: 600px; border: none; border-radius: 5px; margin-top: 20px;"></iframe>
+    
+    <p style="text-align: center; margin-top: 20px;">v2024.9</p>
 
-    <!-- Version at the bottom -->
-    <footer>
-        <p class="version-text">v2024.9</p>
-    </footer>
-
-    <!-- JavaScript for handling the search functionality -->
     <script>
-        function accessWebsite(event) {
-            event.preventDefault();
-            let url = document.getElementById('search-input').value.trim();
-            
-            if (!url.includes("://")) {
-                url = 'https://' + url;
+        // Function to access the website and display in iframe
+        function accessWebsite() {
+            let url = document.getElementById('search-bar').value;
+            if (!url.startsWith('http://') && !url.startsWith('https://')) {
+                url = 'https://' + url; // Automatically prepend HTTPS
             }
-
-            window.open(url, '_blank');
+            document.getElementById('website-frame').src = url;
+            document.getElementById('website-frame').style.display = 'block'; // Show iframe
         }
+
+        // Load user settings from Local Storage
+        document.addEventListener('DOMContentLoaded', () => {
+            const savedSettings = JSON.parse(localStorage.getItem('userSettings'));
+            if (savedSettings) {
+                document.getElementById('search-bar').value = savedSettings.defaultURL || '';
+            }
+        });
     </script>
+
 </body>
 </html>
