--- a/access-beta.html
+++ b/access-beta.html
@@ -13,61 +13,86 @@
             color: #333;
             margin: 0;
             padding: 20px;
-            overflow: hidden; /* Prevent scrolling during loading */
         }
+ 
         .topbar {
             display: flex;
             justify-content: space-between;
             align-items: center;
             background-color: #0056b3;
             padding: 10px;
-            border-radius: 8px;
+            border-radius: 12px;
             color: white;
         }
+ 
+        .search-container {
+            display: flex;
+            align-items: center;
+            flex: 1;
+        }
+ 
+        .search-bar {
+            border: none;
+            border-radius: 20px;
+            padding: 10px 15px;
+            flex: 1;
+            background-color: #e0e4ff;
+            transition: all 0.3s ease;
+        }
+ 
+        .search-bar:focus {
+            outline: none;
+            background-color: #d3dbff;
+            width: 100%;
+        }
+ 
+        .go-button {
+            display: none;
+        }
+ 
+        .search-container::after {
+            content: 'Go';
+            background-color: #007bff;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 20px;
+            margin-left: -50px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+ 
+        .search-container:hover::after {
+            background-color: #0056b3;
+        }
+ 
         .button {
             background-color: #007bff;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             padding: 10px 20px;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            margin: 0 5px;
         }
+ 
         .button:hover {
             background-color: #0056b3;
         }
-        .search-container {
-            display: flex;
-            align-items: center;
+ 
+        .topbar .button {
+            margin-left: 10px;
         }
-        .search-bar {
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 10px;
-            margin-right: 5px;
-            width: 300px;
-            transition: width 0.3s ease;
-        }
-        .search-bar:focus {
-            width: 400px;
-            outline: none;
-        }
-        /* Popup Styles */
-        #popup {
+ 
+        iframe {
             display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
-            padding: 20px;
-            text-align: center;
-            width: 300px;
+            width: 100%;
+            height: 600px;
+            border: none;
+            border-radius: 10px;
+            margin-top: 20px;
         }
+ 
+        /* Popup Styles */
         #popup-bg {
             display: none;
             position: fixed;
@@ -78,31 +103,56 @@
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
+ 
+        #popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+            z-index: 1000;
+            padding: 30px;
+            text-align: center;
+            width: 350px;
+            transition: transform 0.3s ease;
+        }
+ 
+        #popup.show {
+            transform: translate(-50%, -50%) scale(1);
+        }
+ 
         #loading {
             display: none;
             text-align: center;
             margin-top: 20px;
+        }
+ 
+        .error-message {
+            color: red;
+            margin-top: 20px;
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
  
     <div class="topbar">
-        <div>Access Beta</div>
         <div class="search-container">
-            <input type="text" id="search-bar" class="search-bar" placeholder="Search or enter URL">
-            <button id="go-button" class="button" onclick="accessWebsite()">Go</button>
-            <button class="button" onclick="refreshPage()">Refresh Site</button>
+            <input type="text" id="search-bar" class="search-bar" placeholder="Enter URL">
         </div>
         <div>
             <a href="index.html" class="button">Home</a>
             <a href="https://youtu.be/P1jJywOXV5Y?si=0N5SyK70V_2c0UrO" class="button">YouTube</a>
-            <a href="access-beta.html" class="button">Refresh Site</a>
             <button class="button" onclick="showBetaPopup()">Beta</button>
         </div>
     </div>
  
-    <iframe id="website-frame" style="display: none; width: 100%; height: 600px; border: none; border-radius: 5px; margin-top: 20px;"></iframe>
+    <iframe id="website-frame"></iframe>
+ 
+    <div class="error-message" id="error-message"></div>
  
     <div id="popup-bg"></div>
     <div id="popup">
@@ -114,15 +164,33 @@
     <p style="text-align: center; margin-top: 20px;">v2024.9</p>
  
     <script>
+        document.querySelector('.search-container').addEventListener('click', function() {
+            accessWebsite();
+        });
+ 
         function accessWebsite() {
             let url = document.getElementById('search-bar').value;
-            // Auto-prepend HTTPS if needed
-            if (!url.startsWith('http://') && !url.startsWith('https://')) {
-                url = 'https://' + url; 
-            }
+            const errorMessage = document.getElementById('error-message');
             const iframe = document.getElementById('website-frame');
+ 
+            // Ensure URL starts with https://
+            if (!url.startsWith('http://') && !url.startsWith('https://')) {
+                url = 'https://' + url;
+            }
+ 
+            // Reset the iframe and error message
+            iframe.src = '';
+            errorMessage.textContent = '';
+ 
+            // Check if the URL can be embedded in iframe
             iframe.src = url;
-            iframe.style.display = 'block'; // Show iframe
+            iframe.style.display = 'block';
+            iframe.onload = function() {
+                if (iframe.contentDocument.body.innerHTML.includes("refused to connect")) {
+                    errorMessage.textContent = url + " refused to connect.";
+                    iframe.style.display = 'none';
+                }
+            };
         }
  
         function refreshPage() {
@@ -131,12 +199,12 @@
  
         function showBetaPopup() {
             document.getElementById('popup-bg').style.display = 'block';
-            document.getElementById('popup').style.display = 'block';
+            document.getElementById('popup').classList.add('show');
         }
  
         function closePopup() {
             document.getElementById('popup-bg').style.display = 'none';
-            document.getElementById('popup').style.display = 'none';
+            document.getElementById('popup').classList.remove('show');
  
             // Show loading screen
             document.getElementById('loading').style.display = 'block';
