--- a/access-beta.html
+++ b/access-beta.html
@@ -9,63 +9,34 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #f0f4ff;
+            background-color: #f4f4f4;
             color: #333;
             margin: 0;
-            padding: 20px;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
  
         .topbar {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #0056b3;
-            padding: 10px;
-            border-radius: 12px;
-            color: white;
-        }
- 
-        .search-container {
-            display: flex;
-            align-items: center;
-            flex: 1;
-        }
- 
-        .search-bar {
-            border: none;
-            border-radius: 20px;
-            padding: 10px 15px;
-            flex: 1;
-            background-color: #e0e4ff;
-            transition: all 0.3s ease;
-        }
- 
-        .search-bar:focus {
-            outline: none;
-            background-color: #d3dbff;
             width: 100%;
-        }
- 
-        .go-button {
-            display: none;
-        }
- 
-        .search-container::after {
-            content: 'Go';
-            background-color: #007bff;
-            color: white;
-            padding: 10px 15px;
-            border-radius: 20px;
-            margin-left: -50px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
- 
-        .search-container:hover::after {
             background-color: #0056b3;
+            padding: 15px 20px;
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            color: white;
         }
  
-        .button {
+        .topbar .title {
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin: 0 auto;
+        }
+ 
+        .topbar .button {
             background-color: #007bff;
             color: white;
             border: none;
@@ -73,26 +44,58 @@
             padding: 10px 20px;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            font-size: 1rem;
+            margin-left: 15px;
         }
  
-        .button:hover {
+        .topbar .button:disabled {
+            background-color: #666;
+            cursor: not-allowed;
+        }
+ 
+        .topbar .button:hover:not(:disabled) {
+            background-color: #004a85;
+        }
+ 
+        .search-container {
+            display: flex;
+            align-items: center;
+            width: 60%;
+            margin-top: 30px;
+        }
+ 
+        .search-bar {
+            flex-grow: 1;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 25px;
+            background-color: #e0e0e0;
+            font-size: 1rem;
+            transition: width 0.3s ease;
+        }
+ 
+        .search-bar:focus {
+            outline: none;
+            background-color: #d0d0d0;
+            width: 100%;
+        }
+ 
+        .search-container .go-button {
+            margin-left: -50px;
+            background-color: #007bff;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+ 
+        .search-container .go-button:hover {
             background-color: #0056b3;
         }
  
-        .topbar .button {
-            margin-left: 10px;
-        }
- 
-        iframe {
-            display: none;
-            width: 100%;
-            height: 600px;
-            border: none;
-            border-radius: 10px;
-            margin-top: 20px;
-        }
- 
-        /* Popup Styles */
+        /* Pop-up Styling */
         #popup-bg {
             display: none;
             position: fixed;
@@ -109,120 +112,119 @@
             position: fixed;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%) scale(0);
+            transform: translate(-50%, -50%);
             background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-            z-index: 1000;
+            border-radius: 15px;
             padding: 30px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            z-index: 1000;
             text-align: center;
-            width: 350px;
-            transition: transform 0.3s ease;
+            width: 300px;
         }
  
-        #popup.show {
-            transform: translate(-50%, -50%) scale(1);
+        #popup h3 {
+            margin: 0 0 20px;
+            font-size: 1.3rem;
         }
  
-        #loading {
-            display: none;
-            text-align: center;
+        #popup button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            border: none;
+            color: white;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+ 
+        /* Style for Refresh button */
+        .refresh-btn {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            padding: 10px 20px;
+            cursor: pointer;
             margin-top: 20px;
         }
  
-        .error-message {
-            color: red;
-            margin-top: 20px;
-            font-size: 14px;
+        .refresh-btn:hover {
+            background-color: #0056b3;
+        }
+ 
+        /* Footer Version */
+        footer {
+            position: absolute;
+            bottom: 10px;
+            color: #888;
+            font-size: 0.9rem;
         }
     </style>
 </head>
 <body>
  
+    <!-- Topbar with buttons -->
     <div class="topbar">
-        <div class="search-container">
-            <input type="text" id="search-bar" class="search-bar" placeholder="Enter URL">
-        </div>
-        <div>
-            <a href="index.html" class="button">Home</a>
-            <a href="https://youtu.be/P1jJywOXV5Y?si=0N5SyK70V_2c0UrO" class="button">YouTube</a>
-            <button class="button" onclick="showBetaPopup()">Beta</button>
-        </div>
+        <a href="index.html" class="button">Home</a>
+        <span class="title">Access Beta</span>
+        <button class="button" disabled>Beta</button>
     </div>
  
-    <iframe id="website-frame"></iframe>
+    <!-- Search bar and button -->
+    <div class="search-container">
+        <input type="text" id="search-bar" class="search-bar" placeholder="Enter URL">
+        <button class="go-button" onclick="accessWebsite()">Go</button>
+    </div>
  
-    <div class="error-message" id="error-message"></div>
- 
+    <!-- Popup for Beta Button -->
     <div id="popup-bg"></div>
     <div id="popup">
         <h3>You cannot access this page.</h3>
-        <button class="button" onclick="closePopup()">OK</button>
+        <button onclick="closePopup()">OK</button>
     </div>
  
-    <p id="loading" style="display: none;">Loading Assets...</p>
-    <p style="text-align: center; margin-top: 20px;">v2024.9</p>
+    <!-- Refresh Button -->
+    <button class="refresh-btn" onclick="refreshPage()">Refresh Site</button>
+ 
+    <!-- Version -->
+    <footer>v2024.9</footer>
  
     <script>
-        document.querySelector('.search-container').addEventListener('click', function() {
-            accessWebsite();
-        });
- 
+        // Access website function: opens in new tab
         function accessWebsite() {
             let url = document.getElementById('search-bar').value;
-            const errorMessage = document.getElementById('error-message');
-            const iframe = document.getElementById('website-frame');
  
-            // Ensure URL starts with https://
+            // Ensure the URL starts with https://
             if (!url.startsWith('http://') && !url.startsWith('https://')) {
                 url = 'https://' + url;
             }
  
-            // Reset the iframe and error message
-            iframe.src = '';
-            errorMessage.textContent = '';
- 
-            // Check if the URL can be embedded in iframe
-            iframe.src = url;
-            iframe.style.display = 'block';
-            iframe.onload = function() {
-                if (iframe.contentDocument.body.innerHTML.includes("refused to connect")) {
-                    errorMessage.textContent = url + " refused to connect.";
-                    iframe.style.display = 'none';
-                }
-            };
+            window.open(url, '_blank');
         }
  
+        // Refresh the page function
         function refreshPage() {
             location.reload();
         }
  
+        // Show Beta button pop-up
         function showBetaPopup() {
             document.getElementById('popup-bg').style.display = 'block';
-            document.getElementById('popup').classList.add('show');
+            document.getElementById('popup').style.display = 'block';
         }
  
+        // Close the pop-up
         function closePopup() {
             document.getElementById('popup-bg').style.display = 'none';
-            document.getElementById('popup').classList.remove('show');
+            document.getElementById('popup').style.display = 'none';
  
-            // Show loading screen
-            document.getElementById('loading').style.display = 'block';
+            // Fake loading screen after OK is clicked
             setTimeout(() => {
-                document.getElementById('loading').textContent = "Loaded Assets";
-                setTimeout(() => {
-                    document.getElementById('loading').style.display = 'none';
-                }, 2000);
+                alert("Loaded Assets");
             }, 7000);
         }
  
-        // Load user settings from Local Storage
-        document.addEventListener('DOMContentLoaded', () => {
-            const savedSettings = JSON.parse(localStorage.getItem('userSettings'));
-            if (savedSettings) {
-                document.getElementById('search-bar').value = savedSettings.defaultURL || '';
-            }
-        });
+        // Beta button event listener to show the pop-up
+        document.querySelector('.button[disabled]').addEventListener('click', showBetaPopup);
     </script>
  
 </body>
