--- a/signup.html
+++ b/signup.html
@@ -1,10 +1,145 @@
-<!DOCTYPE php>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unblocked V2</title>
-  <h1>Signup or Login is unavailable</h1>
-  <h4>Will be available soon!</h3>
-  <h7>Coming with update 2024.9f -- Part 4</h6>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+ 
+        .signup-container {
+            background-color: white;
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 350px;
+        }
+ 
+        .signup-container h2 {
+            margin-bottom: 20px;
+        }
+ 
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            font-size: 1rem;
+        }
+ 
+        .signup-btn, .login-btn {
+            width: 100%;
+            background-color: #007bff;
+            color: white;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            margin-top: 10px;
+            font-size: 1rem;
+        }
+ 
+        .signup-btn:hover, .login-btn:hover {
+            background-color: #0056b3;
+        }
+ 
+        .switch-login {
+            color: #007bff;
+            cursor: pointer;
+            margin-top: 20px;
+            display: block;
+        }
+ 
+        .switch-login:hover {
+            text-decoration: underline;
+        }
+ 
+        /* Popup login */
+        #popup-bg, #login-popup {
+            display: none;
+        }
+ 
+        #popup-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+ 
+        #login-popup {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            border-radius: 15px;
+            padding: 30px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            z-index: 1000;
+            text-align: center;
+            width: 300px;
+        }
+ 
+        #login-popup h3 {
+            margin-bottom: 20px;
+        }
+ 
+        #login-popup input[type="text"], #login-popup input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+        }
+ 
+        #login-popup .login-btn {
+            width: 100%;
+            background-color: #007bff;
+            color: white;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            margin-top: 10px;
+            font-size: 1rem;
+        }
+    </style>
 </head>
+<body>
+ 
+    <div class="signup-container">
+        <h2>Sign Up</h2>
+        <input type="text" id="signup-username" placeholder="Username">
+        <input type="password" id="signup-password" placeholder="Password">
+        <button class="signup-btn" onclick="signup()">Sign Up</button>
+        <span class="switch-login" onclick="showLoginPopup()">Log in</span>
+    </div>
+ 
+    <!-- Background for popup -->
+    <div id="popup-bg"></div>
+ 
+    <!-- Login popup -->
+    <div id="login-popup">
+        <h3>Log In</h3>
+        <input type="text" id="login-username" placeholder="Username">
+        <input type="password" id="login-password" placeholder="Password">
+        <button class="login-btn" onclick="login()">Log In</button>
+    </div>
+ 
+    <script src="signupscript.js"></script>
+ 
+</body>
+</html>
