--- a/hdk.html
+++ b/hdk.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unblocked V2X</title>
-    <link rel="stylesheet" href="hdk.css">
+    <title>Unblocked V2</title>
+    <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.0/css/all.css">
     <script>
         function redirectToRandomSite() {
             const urls = [
-                "https://unblockedv2.vercel.app/hdk.html",
+                "https://unblockedv2.vercel.app/",
             ];
             const randomIndex = Math.floor(Math.random() * urls.length);
             window.location.href = urls[randomIndex];
@@ -18,72 +18,57 @@
     </script>
 </head>
 <body>
-    <nav>
-        <img src="images/icon.png" alt="logo" onclick="redirectToRandomSite()">
-        <h1>Unblocked V2X</h1>
-    </nav>
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <img src="images/icon.png" alt="logo" onclick="redirectToRandomSite()" class="logo">
+            <h1>Unblocked V2</h1>
+            <div class="search-bar">
+                <input type="text" placeholder="Search...">
+                <button><i class="fas fa-search"></i></button>
+            </div>
+        </nav>
+    </header>
 
-    <div class="content">
-        <div class="search-bar">
-            <input type="text" placeholder="Search games...">
-            <button><i class="fas fa-search"></i></button>
-        </div>
-
+    <!-- Featured Games Section -->
+    <section class="featured-section">
+        <h2 class="section-title">Featured Games</h2>
         <div class="game-grid">
-            <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="Bob the Robber 2"></a>
-            <a href="games/vex7/"><img src="images/vex7.jpeg" alt="Vex 7"></a>
-            <a href="games/vex6/"><img src="images/vex6.jpeg" alt="Vex 6"></a>
-            <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="Moto X3M"></a>
-            <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="Retro Bowl"></a>
-            <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="Drive Mad"></a>
-            <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
-            <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
-            <a href="games/1v1lol/"><img src="images/1v1icon.png" alt="1v1 lol"></a>
-            <a href="games/a-dance-of-fire-and-ice/"><img src="images/adofai.png" alt="a dance of fire and ice"></a>
-            <a href="games/amongus/"><img src="images/auicon.png" alt="among us"></a>
-            <a href="games/backrooms/"><img src="images/backrooms.png" alt="backrooms"></a>
-            <a href="games/badicecream2/"><img src="images/badice2.png" alt="bad ice cream 2"></a>
-            <a href="games/baldisbasics/"><img src="images/baldi.png" alt="baldis basics"></a>
-            <a href="games/basketballstars/"><img src="images/basketballstars.png" alt="basketball stars"></a>
-            <a href="games/basketbrosio/"><img src="images/basketbros.png" alt="basketbros.io"></a>
-            <a href="games/2048/"><img src="images/2048.png" alt="2048"></a>
-            <a href="games/bitlife/"><img src="images/bitlife.png" alt="bitlife"></a>
-            <a href="games/worldshardestgame/"><img src="images/worldhardestgame.png" alt="world's hardest game"></a>
-            <a href="games/worldshardestgame2/"><img src="images/worldshardestgame2.png" alt="world's hardest game 2"></a>
-            <a href="games/slope2/"><img src="images/slope21.png" alt="slope 2"></a>
-            <a href="games/sm64/"><img src="images/sm64.png" alt="super mario 64"></a>
-            <a href="games/stickman-hook/"><img src="images/stickmanhook.png" alt="stickman hook"></a>
-            <a href="games/minecraft-18/"><img src="images/minecraft.png" alt="minecraft"></a>
-            <a href="games/drift-boss/"><img src="images/driftboss.png" alt="drift boss"></a>
-            <a href="games/core-ball/"><img src="images/coreball.png" alt="core ball"></a>
-            <a href="games/wordle/"><img src="images/wordleicon.png" alt="wordle"></a>
-            <a href="games/subway-surfers/"><img src="images/subwaysurfers.png" alt="subway surfers"></a>
-            <a href="games/bad-ice-cream/"><img src="images/badice1.png" alt="bad ice cream"></a>
-            <a href="games/bad-ice-cream-3/"><img src="images/badice3.png" alt="bad ice cream 3"></a>
-            <a href="games/cell-machine/"><img src="images/cellmachine.png" alt="cell machine"></a>
-            <a href="games/cookie-clicker/"><img src="images/cookie.png" alt="cookie clicker"></a>
-            <a href="games/getaway-shootout/"><img src="images/getaway.png" alt="getaway shootout"></a>
-            <a href="games/paperio2/"><img src="images/paperio2.png" alt="paper io 2"></a>
-            <a href="games/temple-run-2/"><img src="images/templerun2.png" alt="temple run 2"></a>
-            <a href="games/tunnel-rush/"><img src="images/tunelrush.png" alt="tunnel rush"></a>
-            <a href="games/drift-hunters/"><img src="images/drifthunters.png" alt="drift hunters"></a>
-            <a href="games/ducklife4/"><img src="images/ducklife4.png" alt="duck life 4"></a>
-            <a href="games/doom/"><img src="images/doom.png" alt="doom"></a>
-            <a href="games/fnaf2/"><img src="images/fnaf2.png" alt="five nights at freddys 2"></a>
-            <a href="games/madalin-stunt-cars-2/"><img src="images/madalin-stunt-cars-2.png" alt="madalin stunt cars 2"></a>
-            <a href="games/madalin-stunt-cars-3/"><img src="images/Madalin-Stunt-Cars-3.png" alt="madalin stunt cars 3"></a>
-            <a href="games/krunker/"><img src="images/krunker.png" alt="krunker"></a>
-            <a href="games/chrome-dino/"><img src="images/dino.gif" alt="chrome dino"></a>
-            <a href="games/csgo-clicker/"><img src="images/csgoclickerBG.png" alt="csgo clicker"></a>
-            <a href="games/10-minutes-till-dawn/"><img src="images/10minstilldawn.png" alt="10 minutes till dawn"></a>
-            <a href="games/jetpack-joyride/"><img src="images/jetpackjoy.png" alt="jetpack joyride"></a>
-            <a href="games/fridaynightfunkin/"><img src="images/fnf.png" alt="friday night funkin"></a>
+            <!-- Game Card -->
+            <a href="games/bob-the-robber-2/" class="game-card">
+                <img src="images/bob-the-robber-2.png" alt="Bob the Robber 2">
+                <div class="game-overlay">
+                    <span class="play-btn"><i class="fas fa-play"></i></span>
+                    <p>Bob the Robber 2</p>
+                </div>
+            </a>
+            <!-- Repeat for other games -->
+            <a href="games/vex7/" class="game-card">
+                <img src="images/vex7.jpeg" alt="Vex 7">
+                <div class="game-overlay">
+                    <span class="play-btn"><i class="fas fa-play"></i></span>
+                    <p>Vex 7</p>
+                </div>
+            </a>
         </div>
+    </section>
 
-        <footer>
-            <p>v2025.x</p>
-        </footer>
-    </div>
+    <!-- All Games Section -->
+    <section class="all-games">
+        <h2 class="section-title">All Games</h2>
+        <div class="game-grid">
+            <!-- Game Cards for All Games -->
+            <a href="games/bob-the-robber-2/" class="game-card">
+                <img src="images/bob-the-robber-2.png" alt="Bob the Robber 2">
+            </a>
+            <!-- Repeat for other games -->
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Unblocked V2 | Version: v2024.9f</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
